--- a/public/index.html
+++ b/public/index.html
@@ -1,26 +1,15 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ru">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content=" Государственное учреждение здравоохранения «Забайкальский краевой онкологический диспансер»"
-    />
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
- 
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link rel="import" href="gos.html">
-    <title>ГУЗ КОД</title>
+    <title>Site</title>
   </head>
   <body>
-
-    
     <div id="root"></div>
- 
-
-     
   </body>
 </html>
