ADD LOGO GUZKOD

--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,50 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <title>Site</title>
+
+    <!-- Основные SEO мета-теги -->
+    <title>Онкологический диспансер ГУЗ КОД — специализированная помощь онкобольным</title>
+    <meta
+      name="description"
+      content="Уже более 70 лет ГУЗ КОД оказывает специализированную медицинскую помощь пациентам с онкологическими заболеваниями, используя передовые технологии, современное оборудование и высококвалифицированные кадры для эффективной профилактики, диагностики, лечения и реабилитации."
+    />
+    <meta
+      name="keywords"
+      content="онкология, онкологический диспансер, лечение рака, диагностика онкологии, реабилитация онкобольных, профилактика рака, ГУЗ КОД, современное оборудование, онкологическая помощь"
+    />
+    <meta name="author" content="ГУЗ КОД" />
+    <meta name="robots" content="index, follow" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- Open Graph для соцсетей (Facebook, Telegram, ВКонтакте) -->
+    <meta
+      property="og:title"
+      content="Онкологический диспансер ГУЗ КОД — специализированная помощь онкобольным"
+    />
+    <meta
+      property="og:description"
+      content="Более 70 лет помогаем пациентам бороться с онкологией. Профилактика, диагностика, лечение и реабилитация на современном уровне."
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.guzkod.ru/" />
+    <meta property="og:image" content="https://www.guzkod.ru/media/ye47mqvay2.jpg" />
+    <meta property="og:site_name" content="ГУЗ КОД" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Онкологический диспансер ГУЗ КОД — помощь онкобольным" />
+    <meta
+      name="twitter:description"
+      content="Современная медицинская помощь пациентам с онкологическими заболеваниями — профилактика, диагностика, лечение и реабилитация."
+    />
+    <meta name="twitter:image" content="https://www.guzkod.ru/media/ye47mqvay2.jpg" />
+
+    <!-- Дополнительно для мобильных -->
+    <meta name="theme-color" content="#ffffff" />
+    <meta name="mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
   </head>
   <body>
     <div id="root"></div>
